[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Nodriza.gd" type="Script" id=1]
[ext_resource path="res://sounds/guinxu_invasion.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/guinxu_retirada.wav" type="AudioStream" id=3]

[node name="Nodriza" type="Node2D" groups=["nodriza"]]
script = ExtResource( 1 )

[node name="Comienza" type="Timer" parent="."]
one_shot = true

[node name="Termina" type="Timer" parent="."]
one_shot = true

[node name="Chekeo" type="Timer" parent="."]
wait_time = 5.0

[node name="SguinxuInvasion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SguinxuRetirada" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="Comienza" to="." method="_on_Comienza_timeout"]
[connection signal="timeout" from="Termina" to="." method="_on_Termina_timeout"]
[connection signal="timeout" from="Chekeo" to="." method="_on_Chekeo_timeout"]
